# audiocall

./: .dockerignore  .env.example  .env.production.example  .gitignore  CONSTRUCTION_AGENT_GUIDE.md  DATA_EXTRACTION_GUIDE.md  Dockerfile  EXAMPLE_CONVERSATIONS.md  IMPLEMENTATION_SUMMARY.md  README.md  docker-compose.yml  plan.md  pyproject.toml
audiocall/: agent.py  main.py
tests/: test_resampler.py
