[project]
name = "audiocall"
version = "0.1.0"
description = "Voice agent powered by Twilio and Google ADK (Gemini Live API)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-adk>=1.27.3",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "twilio>=9.0.0",
    "audioop-lts>=0.2.1; python_version>='3.13'",
    "python-dotenv>=1.0.0",
    "websockets>=12.0",
]

[project.scripts]
audiocall = "audiocall.main:main"
