[project]
name = "audiocall"
version = "0.1.0"
description = "Voice agent powered by Twilio and Google ADK (Gemini Live API)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-adk",
    "fastapi",
    "uvicorn[standard]",
    "twilio",
    "audioop-lts",
    "python-dotenv",
    "websockets",
]

[project.scripts]
audiocall = "audiocall.main:main"
